--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<input class="input-data" type="number" name="Serahan" id="serahan" required=""/><br>
 		<div class="div-main">
 			<div class="div-hantar"><button class="button-hantar" type="submit" name="submit" >Hantar</button></div>
-			<div class="div-link"><a href="paparandata.html">Papar data</a></div>	
+			<div class="div-link"><a href=""https://ajalil313.github.io/laporan/paparandata.html"">Papar data</a></div>	
 			<div class="div-tutup"><input class="input-tutup" type ="button" value="Tutup" onclick="self.close()"></div>
 		</div>
 		</form>
