--- a/paparandata.html
+++ b/paparandata.html
@@ -48,7 +48,7 @@
 <body>
   <div class="div-main">
     <div><h3>PAPARAN DATA</strong></h3></div>
-    <div><a href="http://www.keyindata.com/im_sp/index.html">KEMBALI</strong></a></div>
+    <div><a href="https://ajalil313.github.io/laporan/paparandata.html">KEMBALI</strong></a></div>
   </div>
     <br>
 <iframe src="https://docs.google.com/spreadsheets/d/1P17y233EGhgll8SYO61vQszyHKKP8s8rZJA2TJli_Pw/edit#gid=0" width="360px" height="800px"></iframe>
